chrome_pgo_phase=2
enable_swiftshader=false
ffmpeg_branding="Chrome"
is_clang=true
is_component_build=false
is_debug=false
is_official_build=true
proprietary_codecs=true
target_cpu="x64"
use_sysroot=false
dcheck_always_on=false
blink_symbol_level=0
v8_symbol_level=0
symbol_level=0
enable_rust=true
enable_mse_mpeg2ts_stream_parser=true
# Disables speech recognition APIs that talk to remote servers
enable_speech_service = false

# Disables background printing extensions and remote printing vulnerabilities
enable_print_preview = false

# Remove side panel or discover tracking vectors
enable_lens_desktop_html_ui = false
# Completely disables Google's FLOC / Privacy Sandbox tracking APIs at compile time
enable_reporting = false
# Enable Control Flow Guard (Windows) or Control Flow Integrity (Linux/macOS)
is_cfi = true
use_cfi_cast = true

# Enforces V8 engine sandboxing to mitigate memory corruption vulnerabilities
v8_enable_sandbox = true

# Optional: Build the browser with the "Drumbrake" interpreter if you want to completely drop JIT compiler vectors
v8_enable_webassembly = false 
# Disables debugging symbols. This reduces build size and cuts linking times drastically.
symbol_level = 0

# Disables Link-Time Optimization. LTO takes hours on a single thread.
is_official_build = false
use_thin_lto = false

# Enables component builds (splits monolithic binaries into smaller shared libraries)
is_component_build = true

# Tells the compiler to optimize for build speed rather than maximum execution performance
optimize_for_size = true
# --- ÉP TỐC ĐỘ BIÊN DỊCH TRÊN GITHUB RUNNER (THAY THẾ CHO -j 1) ---
is_debug = false
symbol_level = 0                   # Tắt file debug. Giảm 80% thời gian link file trên Windows.
blink_symbol_level = 0             # Tắt debug riêng cho Blink engine để giảm tải RAM.
is_official_build = false          # Tắt tối ưu hóa Official. Tiết kiệm hàng giờ chạy đơn nhân.
use_thin_lto = false               # BẮT BUỘC: Tắt LTO để tránh tràn bộ nhớ RAM (OOM) gây crash.
use_lld = true                     # Ép Windows dùng linker LLD nhanh hơn của LLVM.

# --- BẢO MẬT & CHỐNG THEO DÕI CHO UNGOOGLED CHROMIUM ---
enable_reporting = false           # Triệt tiêu hoàn toàn telemetry và báo cáo ngầm.
enable_speech_service = false      # Xóa bỏ API nhận diện giọng nói gửi về máy chủ từ xa.
enable_print_preview = false       # Gỡ bỏ các hàm kết nối cloud print theo dõi thiết bị.
v8_enable_sandbox = true           # Kích hoạt cô lập bộ nhớ cho JavaScript Engine.
v8_enable_webassembly = false      # Tắt WebAssembly để chặn đứng 70% nguy cơ exploit zero-day.

